# snippets-py

./: LICENSE  README.md  flake.nix  pyproject.toml
src/dduda/snippets/cache/: cached_functions.py  cached_methods.py
src/dduda/snippets/singleton/: singleton_decorator.py  singleton_dunder.py  singleton_method.py
tests/cache/: test_cached_functions.py  test_cached_methods.py
tests/singleton/: test_singleton_decorator.py  test_singleton_instance_method.py  test_singleton_new_dunder.py
